WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202304
[GTK][WPE] Fixes for non-unified builds after
r249714
https://bugs.webkit.org/show_bug.cgi?id=202304
Summary
[GTK][WPE] Fixes for non-unified builds after r249714
Adrian Perez
Reported
2019-09-27 01:12:10 PDT
SSIA. A few build issues have piled up since
r249714
— a patch is coming momentarily; I like to pass them through the EWS bots to make sure other ports aren't accidentally broken.
Attachments
Patch
(5.71 KB, patch)
2019-09-27 01:19 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-09-27 01:19:22 PDT
Created
attachment 379714
[details]
Patch
WebKit Commit Bot
Comment 2
2019-09-27 15:15:55 PDT
Comment on
attachment 379714
[details]
Patch Clearing flags on attachment: 379714 Committed
r250463
: <
https://trac.webkit.org/changeset/250463
>
WebKit Commit Bot
Comment 3
2019-09-27 15:15:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-09-27 15:16:19 PDT
<
rdar://problem/55796503
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug