[GTK][WPE] Fixes for non-unified builds after r249714 https://bugs.webkit.org/show_bug.cgi?id=202304

Reviewed by Youenn Fablet.

Source/WebCore:

No new tests needed.

* Modules/websockets/WorkerThreadableWebSocketChannel.cpp: Add missing inclusion of Frame.h
to make the compiler stop complaining about Frame being used without being defined.
* inspector/InspectorShaderProgram.h: Add missing inclusion of wtf/Variant.h, where
WTF::Monostate is defined; and prefixed the usage with its namespace.

Source/WebKit:

* NetworkProcess/NetworkLoadChecker.h: Add missing inclusion of the pal/SessionID.h header.
* NetworkProcess/NetworkResourceLoadMap.cpp: Add missing inclusion of the
NetworkResourceLoader.h header.
* UIProcess/API/C/WKWebsiteDataStoreConfigurationRef.cpp:
(WKWebsiteDataStoreConfigurationCreate): Add missing namespace to usage of the
WebKit::IsPersistent::Yes value.
* UIProcess/WebPageProxy.cpp: Add missing inclusion of the LegacyGlobalSettings.h header.


Canonical link: https://commits.webkit.org/215879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250463 268f45cc-cd09-0410-ab3c-d52691b4dbfc