Source/WebKit/NetworkProcess/NetworkLoadChecker.h
@@ -32,6 +32,7 @@
 #include <WebCore/FetchOptions.h>
 #include <WebCore/NetworkLoadInformation.h>
 #include <WebCore/ResourceError.h>
+#include <pal/SessionID.h>
 #include <wtf/CompletionHandler.h>
 #include <wtf/Expected.h>
 #include <wtf/Variant.h>
